--- a/frontend/src/app/berlet/berlet.component.css
+++ b/frontend/src/app/berlet/berlet.component.css
@@ -95,37 +95,7 @@ h3{
     font-size: large;
     letter-spacing: 0.5px;
 }
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 2;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
-    
-}
-.modal-content {
-    display: grid;
-    border-radius: 0;
-    border-width: 0;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    width: fit-content; /* Could be more or less, depending on screen size */
-    grid-template-columns: repeat(1 , 200px);
-    grid-template-rows: repeat(5, auto);
-    
-    grid-template-areas: 
-    "profile-cross"
-    "profile-picture"
-    "profile-username"
-    "email-adress"
-    "rank"
-    "notifications";
-}
+
 .close {
     color: #ff5353;
     text-align: right;
@@ -154,7 +124,9 @@ nav ul li {
     font-size: 1.5rem;
 }
 .btn-rendel{
-    text-align: left;
+    display: grid;
+    place-self: center;
+    text-align: center;
     font-size: 1rem;
     width: 150px;
 }
