--- a/frontend/src/app/berlet/berlet.component.html
+++ b/frontend/src/app/berlet/berlet.component.html
@@ -105,8 +105,7 @@
                     <th>Ár</th>
                 </tr>
                 <tr class="tr tr2" *ngFor="let berlet of berletek">
-                    <td class="btn btn-rendel" 
-                        id="rendel">{{berlet.berlet_tipus}}</td>
+                    <td >{{berlet.berlet_tipus}}</td>
                     <td>{{berlet.berlet_ar}} Ft</td>
                 </tr>
                 <!-- <div class="modal" id="myModal">
