--- a/frontend/src/app/bufe/bufe.component.html
+++ b/frontend/src/app/bufe/bufe.component.html
@@ -17,10 +17,10 @@
                     <a routerLink="/regisztracio-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">REGISZTRÁCIÓ</a>
                 </li>
                 <li>
-                    <a class="btn btn-secondary btn-lg btn-block" routerLink="/bejelentkezes-component" routerLinkActive="active">BELÉPÉS</a>
+                    <a class="btn btn-secondary btn-lg btn-block" routerLink="/bejelentkezes-component" routerLinkActive="active">Belépés</a>
                 </li>
                 <li>
-                    <a routerLink="/berlet-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">BÉRLET</a>
+                    <a routerLink="/kapcsolat-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">KAPCSOLAT</a>
                 </li>
                 <li>
                     <a class="btn btn-secondary btn-lg btn-block" routerLink="/edzo-component" routerLinkActive="active">EDZŐK</a>
@@ -29,7 +29,7 @@
                     <a routerLink="/felszereles-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">FELSZERELÉS</a>
                 </li>
                 <li>
-                    <a class="btn btn-secondary btn-lg btn-block" routerLink="/termek-component" routerLinkActive="active">TERMÉKEK</a>
+                    <a class="btn btn-secondary btn-lg btn-block" routerLink="/bejelentkezes-component" routerLinkActive="active" (click)="TermekBelepesHiba()">TERMÉKEK</a>
                 </li>
                 <li>
                     <a class="btn btn-secondary btn-lg btn-block" routerLink="/karrier-component" routerLinkActive="active">KARRIER</a>
