--- a/frontend/src/app/kapcsolat/kapcsolat.component.css
+++ b/frontend/src/app/kapcsolat/kapcsolat.component.css
@@ -60,22 +60,72 @@ h3{
     color: black;
     grid-area: content;
     display: grid;
-    
-    grid-template-columns: 150px auto;
+    grid-template-columns: auto auto;
     grid-template-rows: auto ;
+    gap: 20px;
     grid-template-areas: 
     "nav middle";
 }
 .middle{
+    left: 20px;
     padding-top: 15px;
-    display: grid;
     grid-area: middle;
-    place-items: center;
+    text-align: center;
+    place-content: center;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto auto;
+    grid-template-areas: 
+    "middle-pic"
+    "middle-caption"
+    "table";
 }
-.form-group{
-    width: 300px;
-    align-self: center;
-    align-items: center;
+#table{
+    grid-area: table;
+    text-align: left;
+    margin-right: 10px;
+    margin-bottom: 20px;
+    font-size: large;
+}
+tr:hover {
+    background-color: rgba(255, 0, 0, 0.645);
+}
+.tr1{
+    background-color: #8d8d8d;
+}
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+  
+  /* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+  
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
 nav {
     width: 150px;
@@ -97,15 +147,6 @@ nav ul li {
     color: rgb(255, 255, 255);
     font-size: 1.5rem;
 }
-.hiba{
-    color: red;
-}
-
-.redirectContainer{
-    display: grid;
-    place-items: center;
-    place-content: center;
-}
 footer {
     height: 50px;
     background-color: #777;
@@ -119,16 +160,37 @@ footer {
 @media (max-width: 1000px){
     #container{
         width: 600px;
+
+    }
+    .middle{
+        align-items: center;
+        justify-items: top;
+    }
+    img{
+        margin-top: 5px;
+        width: 400px;
     }
 }
 @media (max-width: 650px){
     #container{
         width: 300px;
-        align-self: center;
+        margin: 75px;
+        align-content: center;
     }
     nav{
         width: 110px;
         font-weight: 200;
+    }
+    .tr1{
+        font-size: 16px;
+    }
+    .tr2{
+        font-size: 16px;
+        border-bottom: 1px solid #000;
+    }
+    img{
+        margin-right: 15px;
+        width: 300px;
     }
     .btn.btn-secondary{
         font-size: 15px;
@@ -141,8 +203,32 @@ footer {
         margin-right: 15px;
     }
 }
-@media (max-width:500){
+@media (max-width:500px){
     #container{
-        width: 200;
+        width: 200px;
+        margin: 50px;
+    }
+    img{
+        width: 200px;
+    }
+    .tr1{
+        font-size: 10px;
+    }
+    .tr2{
+        font-size: 10px;
+        border-bottom: 1px solid #000;
+    }
+    nav ul li {    
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+    table{
+        font-size: 10px;
+        width: 150px;
+    }
+}
+@media (max-width:400px){
+    #container{
+        margin: 25px;
     }
 }
