--- a/frontend/src/app/karrier/karrier.component.html
+++ b/frontend/src/app/karrier/karrier.component.html
@@ -17,10 +17,10 @@
                         <a routerLink="/regisztracio-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">REGISZTRÁCIÓ</a>
                     </li>
                     <li>
-                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/bejelentkezes-component" routerLinkActive="active">BELÉPÉS</a>
+                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/bejelentkezes-component" routerLinkActive="active">Belépés</a>
                     </li>
                     <li>
-                        <a routerLink="/berlet-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">BÉRLET</a>
+                        <a routerLink="/kapcsolat-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">KAPCSOLAT</a>
                     </li>
                     <li>
                         <a class="btn btn-secondary btn-lg btn-block" routerLink="/edzo-component" routerLinkActive="active">EDZŐK</a>
@@ -32,7 +32,7 @@
                         <a class="btn btn-secondary btn-lg btn-block" routerLink="/bufe-component" routerLinkActive="active">BÜFÉ</a>
                     </li>
                     <li>
-                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/TERMEK-component" routerLinkActive="active">TERMÉKEK</a>
+                        <a class="btn btn-secondary btn-lg btn-block" routerLink="/bejelentkezes-component" routerLinkActive="active" (click)="TermekBelepesHiba()">TERMÉKEK</a>
                     </li>
                 </ul>
             </nav>
