--- a/frontend/src/app/termek/termek.component.css
+++ b/frontend/src/app/termek/termek.component.css
@@ -24,6 +24,10 @@ header{
 h3{
     grid-area: h3;
 }
+textarea {
+    resize: none;
+    width: 465px;
+ }
 .bg {
     background-image: linear-gradient(-60deg, rgb(10, 10, 10) 50%, rgb(66, 66, 66) 50%);
     bottom:0;
