--- a/frontend/src/app/termek/termek.component.html
+++ b/frontend/src/app/termek/termek.component.html
@@ -1,36 +1,21 @@
-<script >
-    var coll = document.getElementsByClassName("collapsible");
-        var i;
 
-        for (i = 0; i < coll.length; i++) {
-            coll[i].addEventListener("click", function () {
-                this.classList.toggle("active");
-                var content = this.nextElementSibling;
-                if (content.style.display === "block") {
-                    content.style.display = "none";
-                } else {
-                    content.style.display = "block";
-                }
-            });
-        }
-</script>
 <div class="bg"></div>
 <div class="bg bg2"></div>
 <div class="bg bg3"></div>
 <div id="container">
-    
+<!-- Rednelésre használt modal ablakok -->
     <div class="modal fade" id="addRendelesTermekModal" tabindex="-1" role="dialog"
     aria-labelledby="addRendelesTermekModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="addRendelesTermekModalLabel">Add Employee</h5>
+                <h5 class="modal-title" id="addRendelesTermekModalLabel">Termék Vásárlás</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <form #addForm="ngForm" (ngSubmit)="addRendelesTermek(addForm)">
+                <form #addTermekForm="ngForm" (ngSubmit)="addRendelesTermek(addTermekForm)">
                     <div class="form-group">
                         <label for="termekID">Termék kíválasztás</label>
                         <input type="number" ngModel name="termekID" class="form-control"
@@ -44,6 +29,7 @@
                     </div>
                     <div class="form-group">
                         <label>Megjegyzes</label>
+                        <br>
                         <textarea maxlength="50" ngModel name="megjegyzes" id="megjegyzes"
                             placeholder="Opcionális max(50)"></textarea>
                     </div>
@@ -58,9 +44,48 @@
                             id="felhasznaloID" min="1">
                     </div>
                     <div class="modal-footer">
-                        <button type="button" id="add-employee-form" class="btn btn-secondary"
+                        <button type="button" id="add-termek-form" class="btn btn-secondary"
                             data-dismiss="modal">Mégse</button>
-                        <button [disabled]="addForm.invalid" type="submit" class="btn btn-secondary">Vásárlás</button>
+                        <button [disabled]="addTermekForm.invalid" type="submit" class="btn btn-secondary">Vásárlás</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="modal fade" id="addRendelesBerletModal" tabindex="-1" role="dialog"
+    aria-labelledby="addRendelesBerletModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="addRendelesBerletModalLabel">Rendelés</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form #addBerletForm="ngForm" (ngSubmit)="addRendelesBerlet(addBerletForm)">
+                    <div class="form-group">
+                        <label>Bérlettípus</label>
+                        <input type="number" ngModel name="berlet_vasarlasID" class="form-control"
+                            id="berlet_vasarlasID" min="1" max="4">
+                        <small class="form-row form-text text-muted">#1-Diák, #2-Felnőtt, #3-Nyugdíjas,
+                            #4-Csecsemő</small>
+                    </div>
+                    <div class="form-group">
+                        <label>Megjegyzés</label>
+                        <textarea maxlength="50" ngModel name="megjegyzes" id="megjegyzes"
+                            placeholder="Opcionális max(50)"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label>FelhasználóID</label>
+                        <input type="number" ngModel name="felhasznaloID" class="form-control"
+                            id="felhasznaloID" min="1">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" id="add-berlet-form" class="btn btn-secondary"
+                            data-dismiss="modal">Mégse</button>
+                        <button [disabled]="addBerletForm.invalid" type="submit" class="btn btn-secondary">Vásárlás</button>
                     </div>
                 </form>
             </div>
@@ -70,7 +95,7 @@
 <header>
     <h3>Land of Fitness Gym</h3>
     <img class="logo" src="../../assets/images/final_logo.svg" alt="logo">
-    
+<!-- Oldalsó navigációs sáv -->
 </header>
     <div id="article">
         <nav>
@@ -79,13 +104,7 @@
                     <a routerLink="/fooldal-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">FŐMENÜ</a>
                 </li>
                 <li>
-                    <a routerLink="/regisztracio-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">REGISZTRÁCIÓ</a>
-                </li>
-                <li>
-                    <a class="btn btn-secondary btn-lg btn-block" routerLink="/bejelentkezes-component" routerLinkActive="active">BELÉPÉS</a>
-                </li>
-                <li>
-                    <a routerLink="/berlet-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">BÉRLET</a>
+                    <a routerLink="/kapcsolat-component" routerLinkActive="active" class="btn btn-secondary btn-lg btn-block">KAPCSOLAT</a>
                 </li>
                 <li>
                     <a class="btn btn-secondary btn-lg btn-block" routerLink="/edzo-component" routerLinkActive="active">EDZŐK</a>
@@ -101,22 +120,35 @@
                 </li>
             </ul>
         </nav>
+        <!-- Tartalmi rész -->
         <div class="middle">
 
             <a  ><img  src="../../assets/images/5.jpg" alt="5. kép"></a>
             <p>Étrendkiegészítőink hatalmas választéka csak rád vár! Fogyáshoz, tömegnöveléshez, vagy akár csak a kiegyensúlyozott mindennapokhoz.
-                Nálunk mindent megtalálsz. Ne habozz! Csapj le rájuk azonnal! 
+                Nálunk mindent megtalálsz. Ne habozz! Csapj le rájuk azonnal!
             </p>
-            <p>Az árak bruttó értékben értendőek!</p>
-            <a class="nav-link btn btn-secondary btn-rendel" (click)="onOpenModal(null!, 'add')">Rendelek! <span
+            <a class="nav-link btn btn-secondary btn-rendel" (click)="onOpenModalBerlet(null!, 'add')">Bérletet Rendelek! <span
                 class="sr-only">(current)</span></a>
+            <table id="table">
+                <tr class="tr tr1">
+                    <th>Bérlettípus</th>
+                    <th>Ár</th>
+                </tr>
+                <tr class="tr tr2" *ngFor="let berlet of berletek">
+                    <td>{{berlet.berlet_tipus}}</td>
+                    <td>{{berlet.berlet_ar}} Ft</td>
+                </tr>
+
+
+            </table>
+
             <div>
                 <form class="form-inline my-2 my-lg-0">
                     <input type="search" (ngModelChange)="searchTermek(key.value)" #key="ngModel" ngModel name="key" id="searchName"
                         class="form-control mr-sm-2" placeholder="Termék keresés..." required>
                 </form>
             </div>
-            
+
             <div class="tableContainer">
                 <table id="table">
                     <tr class="tr1">
@@ -127,48 +159,24 @@
                        <th style="display: none;">Kapható</th>
                     </tr>
                     <tr class="tr2" *ngFor="let termek of termekek">
-                    
-                        <td class="btn collapsible" onclick="document.getElementById('collapsibleContent').style.display='block'">{{termek.termek_nev}}</td>
-                        
+
+                        <td >{{termek.termek_nev}}</td>
+
                         <td id="ar">{{termek.ar}} Ft</td>
                         <td>{{termek.keszlet}} cs</td>
-                        <div class="collapsibleContent" id="collapsibleContent"><i class="fa fa-caret-left" id="closeCollapsible" onclick="document.getElementById('collapsibleContent').style.display='none'"></i>  {{termek.leiras}}</div>
                         <td id="termekid" style="display: none;">{{termek.termekID}}</td>
                         <td id="kaphato" style="display: none;" *ngIf="false">{{termek.kaphato}}</td>
-                        
+
                     </tr>
-                    
-                    <!-- <div class="modal" id="myModal">
-                        <div class="modal-content">
-                            <span class="close" onclick="document.getElementById('myModal').style.display='none'">&times;</span>
-                            <h5>Termék vásárlás</h5>
-                            <div class="form-group">
-                                <label for="termekID">Termék kíválasztás</label>
-                                <select  class="form-control" ngModel name ="termekID" id="termekID" multiple >
-                                    <option *ngFor="let termek of termekek">{{termek.termekID}}, {{termek.termek_nev}}</option>
-                                </select>
-                                <label>Megjegyzes</label>
-                                <textarea maxlength="50" ngModel name="megjegyzes" id="megjegyzes" placeholder="Opcionális max(50)"
-                                    style="width:absolute;"></textarea>
-                                <label>FelhasznaloID</label>
-                                <input type="number" ngModel name="felhasznaloID" class="form-control" id="felhID" min="1">
-                                <label for="exampleInputPassword1">Mennyiség</label>
-                                <input type="number" class="form-control" id="mennyiseg">
-                            </div>
-                            <div class="btn btn-secondary btn-block" onclick="document.getElementById('myModal').style.display='none';
-                            let ar = document.getElementById('ar');
-                            let termekid = document.getElementById('termekid');
-                            let input = document.getElementById('mennyiseg').value;
-                            alert(termekid);">Megrendelem</div>
-                        </div>
-                        
-                    </div> -->
-                    
+
                 </table>
+
             </div>
-            
+            <a class="nav-link btn btn-secondary btn-rendel" (click)="onOpenModalTermek(null!, 'add')">Terméket Rendelek! <span
+                class="sr-only">(current)</span></a>
+                <p>Az árak bruttó értékben értendőek!</p>
         </div>
-        
+
     </div>
     <footer>
         <p>© Kovácsfi Alex/Kovács Richárd/Kuczi Dániel</p>
